--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/websockets": "^9.0.11",
     "argon2": "^0.29.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -44,7 +46,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6"
+    "rxjs": "^7.5.6",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
